install/msb-ingress.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: msb-iag-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: msb-iag
spec:
  hosts:
  - "*"
  gateways:
  - msb-iag-gateway
  http:
  - match:
    route:
    - destination:
        host: msb-iag
        port:
          number: 80
